# enterprise-agentic-rag

./: .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  serena.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: __init__.py  settings.py
docs/adr/: 000-template.md  001-phase1-core-rag-architecture.md  README.md
docs/design/: generation-integration-test-design.md  phase1-detailed-design.md
src/: main.py
src/application/services/: __init__.py  chunking_service.py  generation_service.py  ingestion_service.py  search_service.py
src/domain/: __init__.py  entities.py  exceptions.py  interfaces.py  value_objects.py
src/infrastructure/: __init__.py
src/infrastructure/embeddings/: __init__.py  fastembed_sparse.py  openai_embedding.py
src/infrastructure/llm/: __init__.py  openai_llm.py
src/infrastructure/parsers/: __init__.py  unstructured_parser.py
src/infrastructure/repositories/: __init__.py  postgres_document_repository.py
src/infrastructure/rerankers/: __init__.py  cohere_reranker.py
src/infrastructure/storage/: __init__.py  minio_storage.py
src/infrastructure/vectorstores/: __init__.py  qdrant_vectorstore.py
src/presentation/api/: __init__.py  dependencies.py
src/presentation/api/v1/: documents.py  health.py  query.py
src/presentation/schemas/: __init__.py  documents.py  query.py
tests/: conftest.py
tests/integration/: conftest.py  test_cohere_reranker.py  test_fastembed_sparse.py  test_generation_llm_quality.py  test_ingestion_service.py  test_minio_storage.py  test_openai_embedding.py  test_postgres_document_repository.py  test_qdrant_vectorstore.py  test_search_service.py  test_unstructured_parser.py
tests/integration/evaluators/: __init__.py  llm_judge.py  ragas_wrapper.py
tests/integration/fixtures/: golden_qa_dataset.py  sample.docx  sample.md  sample.txt
tests/unit/: test_chunking_service.py  test_cohere_reranker.py  test_entities.py  test_fastembed_sparse.py  test_generation_service.py  test_ingestion_service.py  test_minio_storage.py  test_openai_embedding.py  test_openai_llm.py  test_postgres_document_repository.py  test_qdrant_vectorstore.py  test_search_service.py  test_unstructured_parser.py  test_value_objects.py
tests/unit/presentation/: conftest.py  test_documents.py  test_health.py  test_query.py
